<resources>
    <string name="app_name">MHike_Native</string>
    <string name="title_home">Home</string>
    <string name="title_hikes">All Hikes</string>
    <string name="title_add_hike">Add</string>
    <string name="label_title_add_hike">Add/Edit Hike</string>

    <string name="title_search">Search</string>

    // Added for Profile fragment
    <string name="title_profile">Profile</string>

    <string name="label_title_hike_details">Hike Details</string>

    // Add Hike Form Strings
    <string name="hint_hike_name">Hike Name</string>
    <string name="hint_location">Location (Region, Country)</string>
    <string name="hint_date">Date (DD/MM/YYYY)</string>
    <string name="hint_length">Length (km)</string>

    <string-array name="difficulty_options">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Hard</item>
    </string-array>

    <string-array name="parking_available">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="parking_values">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string name="hint_description">Any additional notes?</string>

    <string name="btn_add_hike">Add Hike</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_update_hike">Save Changes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_observation">Add Observation</string>
    <string name="label_title_add_observation">Add New Observation</string>
    <string name="label_title_edit_observation">Update Observation</string>
    <string name="label_title_edit_hike">Update Hike</string>
    <string name="delete_all_hikes">Delete All Hikes</string>
    <string name="btn_apply_filter">Apply</string>
    <string name="btn_clear_filter">Clear</string>
</resources>