<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/label_title_hike_details"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mhike_native.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hikes"
        android:name="com.example.mhike_native.ui.hikes.HikesFragment"
        android:label="@string/title_hikes"
        tools:layout="@layout/fragment_all_hikes">
        <action
            android:id="@+id/action_navigation_hikes_to_hikeDetailsFragment"
            app:destination="@id/hikeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/hikeDetailsFragment"
        android:name="com.example.mhike_native.ui.hike_details.HikeDetailsFragment"
        android:label="@string/label_title_hike_details"
        tools:layout="@layout/fragment_hike_details">
        <action
            android:id="@+id/action_hikeDetailsFragment_to_navigation_add_hike"
            app:destination="@id/navigation_add_hike" />
        <argument
            android:name="hikeId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_hikeDetailsFragment_to_addEditObservationFragment"
            app:destination="@id/addEditObservationFragment" />
        <action
            android:id="@+id/action_hikeDetailsFragment_to_observationDetailsFragment"
            app:destination="@id/observationDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_hike"
        android:name="com.example.mhike_native.ui.add_edit_hike.AddEditHikeFragment"
        android:label="@string/label_title_add_hike"
        tools:layout="@layout/fragment_add_edit_hike" >
        <argument
            android:name="hikeId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_navigation_add_hike_to_navigation_hikes"
            app:destination="@id/navigation_hikes" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mhike_native.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.example.mhike_native.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/addEditObservationFragment"
        android:name="com.example.mhike_native.ui.add_edit_observation.AddEditObservationFragment"
        android:label="fragment_add_edit_observation"
        tools:layout="@layout/fragment_add_edit_observation" >
        <argument
            android:name="observationId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/observationDetailsFragment"
        android:name="com.example.mhike_native.ui.observation_details.ObservationDetailsFragment"
        android:label="fragment_observation_details"
        tools:layout="@layout/fragment_observation_details" >
        <action
            android:id="@+id/action_observationDetailsFragment_to_addEditObservationFragment"
            app:destination="@id/addEditObservationFragment" />
        <argument
            android:name="observationId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>